--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,43 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.zeb.lowcode</groupId>
 	<artifactId>lowcode.parent</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<description>Low Code Framework um aus einem Domain Driven Design möglichst viel relevanten Code zu generieren (OR-Mapper, Modellklassen, teilweise Services und einfache Oberflächen).</description>
+	<description>Low Code Framework um aus einem Domain Driven Design möglichst
+		viel relevanten Code zu generieren (OR-Mapper, Modellklassen, teilweise
+		Services und einfache Oberflächen).</description>
 
 	<organization>
 		<name>zeb.it</name>
 	</organization>
-	
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
 	<properties>
 		<java.version>17</java.version>
 		<lombok-version>1.18.26</lombok-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
+	<scm>
+		<developerConnection>scm:git:https://github.com/zebopensourcesolutions/zebLowCode.git</developerConnection>
+	</scm>
+
 	<modules>
 		<module>lowcode.model</module>
-		<module>lowcode.generator</module>
-		<module>lowcode.example</module>
+		<!--module>lowcode.generator</module>
+		<module>lowcode.example</module-->
 	</modules>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -64,5 +80,5 @@
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
-	</dependencyManagement>	
+	</dependencyManagement>
 </project>
