Fetchtyp und Opiton auf erweiterte Ganzzahl (Long) ergänzt

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.zeb.lowcode</groupId>
 	<artifactId>lowcode.parent</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<packaging>pom</packaging>
 	<description>Low Code Framework um aus einem Domain Driven Design möglichst
 		viel relevanten Code zu generieren (OR-Mapper, Modellklassen, teilweise
