Tests ergänzt, PMD eingebaut

--- a/lowcode.example/pom.xml
+++ b/lowcode.example/pom.xml
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!-- Standalone Beispiel-POM ohne Parent, damit leicht kopierbar -->
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>de.zeb.lowcode</groupId>
-        <artifactId>lowcode.parent</artifactId>
-        <version>0.1.0</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-
+    <groupId>de.zeb.lowcode</groupId>
     <artifactId>lowcode.example</artifactId>
+    <version>0.1.0</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
+        <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
+        <junit.jupiter.version>6.0.2</junit.jupiter.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>de.zeb.lowcode</groupId>
             <artifactId>lowcode.model</artifactId>
+            <version>0.1.0</version>
         </dependency>
         <dependency>
             <groupId>de.zeb.lowcode</groupId>
             <artifactId>lowcode.generator</artifactId>
             <version>0.1.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
